added security to paths